# gen_sig

./: README.md  pyproject.toml  sync.sh  task_functs_temp.py
Notebooks/Analytics/: tokens_statistics.ipynb
Notebooks/Athena/: athena_example_yoda.ipynb  created_athena_finetune_dataset.ipynb
Notebooks/data_extraction/: extracting_listing_data.ipynb  extracting_listing_example.ipynb  extracting_listing_example_exclusions.ipynb  extracting_listing_example_fashion.ipynb  pretrainer_utils.ipynb  speed_improvements.ipynb
Notebooks/generation/: Mistral7B_oded.ipynb  generation_example-label.ipynb  generation_example-multi_signals_fashion-prompt_improve.ipynb  generation_example-multi_signals_fashion-prompt_improve_annotation.ipynb  generation_example-multi_signals_fashion.ipynb  generation_example.ipynb  gpt_generate_ray.ipynb  guardrailed_generation_gpt.ipynb  guardrailed_generation_merge.ipynb  guardrailed_generation_mistral.ipynb  item-signal-generation.ipynb  temp_can_delete.ipynb
Notebooks/post_processing/: annotation_analysis_fashion.ipynb  generation_post_processing_example-py.ipynb  generation_post_processing_example.ipynb
data_extraction/: extraction_funcs.py  extraction_funcs_utils.py
deploy/krylov/: Dockerfile
deploy/ray/: Dockerfile
dev/: ..f
evaluation/: metrics.py
generation/: sigs_gen.py
generation/generators/: base_sigs_generator.py  gpt_generator.py  mistral_generator.py
generation/sigs_classifier/: classifier_funcs.py  classifier_funcs_multi.py
generative_signals/etl/: item_selection.py  load_to_mercury.py
generative_signals/experiments/output_data/: highlighted_text_filtered_by_heuristic-HG_sample_200.xlsx  highlighted_text_heuristic-HG_sample.xlsx
generative_signals/tests/: conftest.py  item_selection_test.py
generative_signals/tests/output_data/: highlighted_text_filtered_by_heuristic-HG_sample_200.xlsx  highlighted_text_filtered_by_heuristic_sample-HG_sample_200.xlsx
gensig_pipeline/: gensig_pipeline.py  gensig_pipeline_base.py  run_gensigs_pipeline.py
gensig_pipeline/configs/: gen_sig_pipeline.yml
